# hermes-wxauto

./: .gitignore  README.md  listen_batches_demo.py  pyproject.toml
docs/superpowers/plans/: 2026-05-09-wechat-bridge-reliability-zh.md  2026-05-09-wechat-bridge-reliability.md  2026-05-11-batch-listener-sender-resolution.md  2026-05-11-local-bridge-server.md
docs/superpowers/specs/: 2026-05-09-wechat-bridge-reliability-design-zh.md  2026-05-11-batch-listener-sender-resolution-design.md  2026-05-11-local-bridge-server-design.md
my_wxauto/: __init__.py
src/my_wxauto/: __init__.py  bridge_batcher.py  bridge_events.py  bridge_server.py  bridge_store.py  cli.py  debug_trace.py  exceptions.py  hermes_sidecar.py  keyboard.py  listener.py  probes.py  response.py  tray.py  wechat.py  window.py  wxauto4_backend.py
tests/: test_bridge_batcher.py  test_bridge_events.py  test_bridge_listener.py  test_bridge_server.py  test_bridge_store.py  test_cli.py  test_hermes_sidecar.py  test_listener.py  test_probes.py  test_wechat.py
